# ASCII-ART-Generator

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  flake.nix  img_to_ascii.py  pyproject.toml  requirements.txt  setup.cfg
client/: package-lock.json  package.json
client/src/: App.svelte
img_tools/: __init__.py  ascii.py  basics.py
server/: app.py  img_to_ascii.py
