[metadata]
name = server
version = 1.0.0
author = Drawbu
description = ASCII ART Convertor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = unix, linux, osx, cygwin, windows
project_urls =
    Github repository=https://github.com/drawbu/ASCII-ART-Generator
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    server
install_requires =
    Flask==2.2.2
    numpy==1.23.2
    opencv-python==4.6.0.66
    Pillow==9.2.0
python_requires = > 3.8
zip_safe = no


[options.extras_require]
dev =
    black
